# VMF-Info

./: .clang-format  CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.h
include/: boost_1_82_0
src/: main.cpp  utils.cpp  utils.h
